# meta-cloudops-simulator

./: Dockerfile  README.md  engine.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
