[project]
name = "cloudops-simulator"
version = "1.0.0"
description = "Cloud Infrastructure Simulation Environment for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "openai",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"